# Abyss

./: .gitignore  .razorcore-enabled  AGENTS.md  Abyss.spec  README.md  README_BUILD.md  build_app.zsh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: AppIcon.icns  README.md
src/abyss/: __init__.py  __main__.py  app.py  processor.py  sanitize.py
tests/: test_processor_helpers.py  test_sanitize.py
