# ============================================================================
# ABYSS - DESKTOP APPLICATION
# ============================================================================
# This pyproject.toml follows RazorBackRoar workspace standards
# Last Updated: 2026-04-24
# Python Version: 3.14.x (STRICT LOCK - never upgrade)
# ============================================================================

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abyss"
version = "1.0.0"
description = "Abyss macOS drag-and-drop metadata removal app"
readme = "README.md"
requires-python = "==3.14.*"
# WHY: Strictly locked to Python 3.14
dependencies = [
    "PySide6>=6.10.1,<7.0.0",
    "Pillow>=12.0.0",
    "pillow-heif>=1.0.0",
    "av>=16.0.0",
    "razorcore",
]

[project.scripts]
abyss = "abyss.app:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["abyss*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
extend = "../ruff.toml"
target-version = "py314"

[tool.ruff.lint.per-file-ignores]
"src/abyss/app.py" = ["N802"]
"tests/**/*.py" = ["D", "S101"]

[tool.ty.environment]
extra-paths = [
    "src",
    "/opt/homebrew/lib/python3.14/site-packages",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]

[tool.uv.sources]
razorcore = { path = "../.razorcore", editable = true }
