# ============================================================================
# ABYSS - DESKTOP APPLICATION
# ============================================================================
# This pyproject.toml follows RazorBackRoar workspace standards
# Last Updated: 2026-04-24
# Python Version: 3.14 primary (best-effort source compatibility 3.12-3.14)
# ============================================================================

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abyss"
version = "2.0.0"
description = "Abyss macOS drag-and-drop metadata removal app"
readme = "README.md"
requires-python = ">=3.12,<3.15"
# WHY: Native dev/build target is 3.14, with source compatibility for 3.12-3.14.
dependencies = [
    "PySide6>=6.10.1,<7.0.0",
    "Pillow>=12.0.0",
    "pillow-heif>=1.0.0",
    "av>=16.0.0",
]

[project.scripts]
abyss = "abyss.app:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["abyss*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    ".DS_Store",
    ".agent",
    ".shared",
    ".toolchains",
]
extend-exclude = ["Clean"]  # Compiled app bundle — not linted

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "W",
    "D",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/abyss/app.py" = ["N802"]
"tests/**/*.py" = ["D", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["abyss"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
extra-paths = [
    "src",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
